<resources>
    <string name="launch_activity">Uruchom aktywność</string>
    <string name="app_name">Traveller</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się lub zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="welcome">"Witaj!"</string>
    <string name="invalid_username">Nazwa użytkownika jest niepoprawna</string>
    <string name="invalid_password">Hasło musi zawierać co najmniej 6 znaków</string>
    <string name="login_failed">"Logowanie nieudane"</string>
    <string name="email">E-mail</string>
    <string name="toLogin">Masz już konto? Zaloguj się!</string>
    <string name="register">Rejestracja</string>
    <string name="displayName">Wyświetlana nazwa</string>
    <string name="login">Logowanie</string>
    <string name="password">Hasło</string>
    <string name="no_account">Nie masz konta? Załóź nowe!</string>
    <string name="or">lub</string>
    <string name="re_password">Powtórz hasło</string>
    <string name="already_a_member">Masz już konto? Zaloguj się!</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="tworca">Twórca</string>
    <string name="open_drawer">Otwórz menu boczne</string>
    <string name="close_drawer">Zamknij menu boczne</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="nav_header_title">Traveller</string>
    <string name="nav_header_username">nav_header_subtitle</string>
    <string name="log_out">Wyloguj się</string>
    <string name="tab">\u0009</string>
    <string name="menu">Menu</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="messages_header">Wiadomości</string>
    <string name="sync_header">Synchronizacja</string>
    <string name="signature_title">Twój podpis</string>
    <string name="reply_title">Domyślna akcja odpowiedzi</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="camera_tracking_title">Śledząca kamera</string>
    <string name="camera_tracking_description">Gdy włączone, kamera śledzi twoją lokalizację</string>
    <string name="google_maps_key">AIzaSyAd9mVHXtr7oJkIwt605x3Wu5A65srtq6Q</string>
    <string name="facebook_app_id">1482538888552931</string>
    <string name="fb_login_protocol_scheme">fb1482538888552931</string>
    <string name="google_client_id">98668081815-f8kdmk55hpjilmpmnbbd858849hnutk7.apps.googleusercontent.com</string>
    <string name="send_location_title">Wysyłaj lokalizację urządzenia</string>
    <string name="send_location_summary">Gdy włączone, osoby z tej samej wycieczki widzą twoją lokalizację</string>
    <string name="search_hint">Szukaj…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_email_verification_success">Weryfikacja e-mail została ukończona!</string>
    <string name="post_email_verification_fail">Weryfikacja e-mail zakończyła się niepowodzeniem. Skontaktuj się z twórcą.</string>
    <string name="reset_password">Zapomniałeś hasła? Utwórz nowe!</string>
    <string name="password_reset_button">Wyślij</string>
    <string name="cancel_button_text">Anuluj</string>
    <string name="password_reset_wrong_email">Podaj poprawny email!</string>
    <string name="preferences_localization_title">Lokalizacja</string>
    <string name="interval_send_data">Częstotliwość wysyłania danych</string>
    <string name="interval_send_data_summary">Jak często aplikacja ma wysyłać dane o twojeje lokalizacji</string>
    <string name="progress_upload">Wysyłanie…</string>
    <string name="upload_success">Wysyłanie powiodło się</string>
    <string name="upload_failure">Niepowodzenie</string>
    <string name="profile">Profil</string>
    <string name="progress_downloading">Pobieranie…</string>
    <string name="download_success">Pobieranie zakończone</string>
    <string name="download_failure">Pobieranie nieudane</string>
    <string name="apply">Zatwierdź</string>
    <string name="update_profile_success">Dane zostały zaktualizowane</string>
    <string name="profile_update_failure">Aktualizacja profile zakończyła się niepowodzeniem</string>
    <string name="something_went_wrong">Coś poszło nie tak, spróbuj ponownie</string>
    <string name="Invalid_data">Niepoprawne dane</string>
    <string name="not_all_permissions_granted">Wymagane uprawnienia nie zostały przyznane. Aplikacja może działać w niewłaściwy sposób.</string>
    <string name="warning">Ostrzeżenie!</string>
    <string name="trips_title_menu">Wycieczki</string>
    <string name="title_trips_list">Wycieczki</string>
    <string name="trip_name">Nazwa wycieczki</string>
    <string name="trip_start_address">Adres początkowy wycieczki</string>
    <string name="trip_end_address">Adres końcowy wycieczki</string>
    <string name="trip_start_date">Data początku wycieczki</string>
    <string name="trip_end_date">Data końca wycieczki</string>
    <string name="person_hint">e-email osoby</string>
    <string name="waypoint_hint">Przystanek</string>
    <string name="add_trip_text_button">Dodaj</string>
    <string name="trip_participants_divider_title">Uczestnicy wycieczki</string>
    <string name="waypoints_divider_title">Przystanki</string>
    <string name="main_data">Podstawowe dane</string>
    <string name="about">O aplikacji</string>
    <string name="changes_in_minutes">Zmiany będą widoczna za kilka minut</string>
    <string name="map">Mapa</string>
    <string name="chat">Chat</string>
    <string name="nearby">W pobliżu</string>
    <string name="trip">Wycieczka</string>
    <string name="trip_start_city">Miejsce startu:</string>
    <string name="trip_author">Twórca:</string>
    <string name="trip_people">Osoby:</string>
    <string name="trip_distance">Trasa:</string>
    <string name="trip_waypoints">Przystanki:</string>
    <string name="not_correct_address">Nieprawidłowy adres</string>
    <string name="choose_trip">Wybierz wycieczkę</string>
    <string name="send_request_add_to_trip">Wyślij prośbę o dołączenie</string>
    <string name="join_trip">Dołącz do wycieczki</string>
    <string name="chat_title">Wiadomości</string>
    <string name="list">Lista</string>
    <string name="participants">Uczestnicy</string>
    <string name="click_back_again_to_exit">Naciśnij WSTECZ jeszcze raz aby wyjść</string>
    <string name="type_a_messeage">Wiadomość…</string>
    <string name="wrong_trip">Zła wycieczka</string>
    <string name="need_to_join_different_trip">Żeby wyświetlić wiadomość musisz dołączyć do</string>
    <string name="travel_mode">Sposób podróżowania</string>
    <string name="driving">Samochodem</string>
    <string name="walking">Pieszo</string>
    <string name="type">Typ</string>
    <string name="accounting">księgowość</string>
    <string name="airport">port lotniczy</string>
    <string name="amusement_park">park rozrywki</string>
    <string name="aquarium">akwarium</string>
    <string name="art_gallery">galeria sztuki</string>
    <string name="atm">bankomat</string>
    <string name="bakery">piekarnia</string>
    <string name="bank">bank</string>
    <string name="bar">knajpa</string>
    <string name="beauty_salon">salon piękności</string>
    <string name="bicycle_store">sklep rowerowy</string>
    <string name="book_store">księgarnia</string>
    <string name="bowling_alley">kręgielnia</string>
    <string name="bus_station">dworzec autobusowy</string>
    <string name="cafe">kawiarnia</string>
    <string name="campground">kemping</string>
    <string name="car_dealer">dealer samochodowy</string>
    <string name="car_rental">wynajem samochodów</string>
    <string name="car_repair">naprawa samochodów</string>
    <string name="car_wash">myjnia</string>
    <string name="casino">kasyno</string>
    <string name="cemetery">cmentarz</string>
    <string name="church">kościół</string>
    <string name="city_hall">ratusz</string>
    <string name="clothing_store">sklep z odzieżą</string>
    <string name="convenience_store">sklep spożywczy</string>
    <string name="courthouse">sąd</string>
    <string name="dentist">stomatolog</string>
    <string name="department_store">dom towarowy</string>
    <string name="doctor">lekarz</string>
    <string name="drugstore">drogeria</string>
    <string name="electrician">elektryk</string>
    <string name="electronics_store">sklep elektroniczny</string>
    <string name="embassy">ambasada</string>
    <string name="fire_station">remiza strażacka</string>
    <string name="florist">kwiaciarnia</string>
    <string name="funeral_home">dom pogrzebowy</string>
    <string name="furniture_store">sklep meblowy</string>
    <string name="gas_station">stacja paliw</string>
    <string name="grocery_or_supermarket">supermarket</string>
    <string name="gym">siłownia</string>
    <string name="hair_care">fryjer</string>
    <string name="hardware_store">sklep z narzędziami</string>
    <string name="hindu_temple">świątynia hinduska</string>
    <string name="home_goods_store">sklep z wyrobami własnymi</string>
    <string name="hospital">szpital</string>
    <string name="insurance_agency">agencja ubezpieczeniowa</string>
    <string name="jewelry_store">sklep jubilerski</string>
    <string name="laundry">pralnia</string>
    <string name="lawyer">prawnik</string>
    <string name="library">biblioteka</string>
    <string name="light_rail_station">stacja kolejki miejskiej</string>
    <string name="liquor_store">monopolowy</string>
    <string name="local_government_office">biuro samorządu terytorialnego</string>
    <string name="locksmith">ślusarz</string>
    <string name="lodging">nocleg</string>
    <string name="meal_delivery">sklep mięsny</string>
    <string name="meal_takeaway">posiłek na wynos</string>
    <string name="mosque">meczet</string>
    <string name="movie_rental">wpożyczalnia filmów</string>
    <string name="movie_theater">kino</string>
    <string name="moving_company">firma przeprowadzkowa</string>
    <string name="museum">muzeum</string>
    <string name="night_club">klub nocny</string>
    <string name="painter">malarz</string>
    <string name="park">park</string>
    <string name="parking">parking</string>
    <string name="pet_store">sklep zoologiczny</string>
    <string name="pharmacy">apteka</string>
    <string name="physiotherapist">fizjoterapeuta</string>
    <string name="plumber">hydraulik</string>
    <string name="police">policja</string>
    <string name="post_office">poczta</string>
    <string name="primary_school">szkoła podstawowa</string>
    <string name="real_estate_agency">agencja nieruchomości</string>
    <string name="restaurant">restauracja</string>
    <string name="roofing_contractor">wykonawca robót dekarskich</string>
    <string name="rv_park">rv park</string>
    <string name="school">szkoła</string>
    <string name="secondary_school">szkoła średnia</string>
    <string name="shoe_store">sklep z butami</string>
    <string name="shopping_mall">centrum handlowe</string>
    <string name="spa">sanatorium</string>
    <string name="stadium">stadion</string>
    <string name="storage">magazyn</string>
    <string name="store">sklep</string>
    <string name="subway_station">stacja metra</string>
    <string name="supermarket">supermarket</string>
    <string name="synagogue">synagoga</string>
    <string name="taxi_stand">stanowisko taksówkowe</string>
    <string name="tourist_attraction">atrakcja turystyczna</string>
    <string name="train_station">stacja kolejowa</string>
</resources>