<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group
            android:id="@+id/group"
    />

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single"
    >
        <item android:title="@string/ustawienia"
              android:id="@+id/ustawienia_item"
              android:icon="@drawable/ic_ustawienia"
        />
        <item android:title="@string/tworca"
              android:id="@+id/tworca_item"
              android:icon="@drawable/ic_autor"
        />
        <item
                android:title="@string/profile"
                android:id="@+id/profile"
                android:icon="@drawable/ic_person"
                />

    </group>
    <group
        android:id="@+id/group_2"
    >
        <item android:title="@string/log_out"
              android:id="@+id/logout"
              android:icon="@drawable/ic_subdirectory_arrow_left"
        />
    </group>

</menu>