<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/preferences_localization_title"
            app:iconSpaceReserved="false">

        <SwitchPreference
                android:key="SEND_LOCATION"
                android:title="@string/send_location_title"
                android:summary="@string/send_location_summary"
                android:defaultValue="true"
                android:checked="true"
                android:disableDependentsState="false"
                app:iconSpaceReserved="false"
        />

        <ListPreference
                android:key="SENDING_DATA_INTERVAL"
                android:title="@string/interval_send_data"
                android:summary="%s"
                android:dependency="SEND_LOCATION"
                app:iconSpaceReserved="false"
                android:disableDependentsState="true"
                android:entries="@array/intervals"
                android:entryValues="@array/intervals_values"
                android:defaultValue="2"
                />

        <SwitchPreference
            android:key="CAMERA_TRACKING"
            android:title="@string/camera_tracking_title"
            android:summary="@string/camera_tracking_description"
            android:defaultValue="true"
            android:checked="true"
            android:disableDependentsState="true"
            app:iconSpaceReserved="false"
            />

        <ListPreference
            android:key="TRAVEL_MODE"
            android:title="@string/travel_mode"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:disableDependentsState="true"
            android:entries="@array/travel_modes_keys"
            android:entryValues="@array/travel_modes_values"
            android:defaultValue="driving"
        />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>
