<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.RegisterFragment">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:maxHeight="300dp"
                android:maxWidth="300dp"
                android:minHeight="150dp"
                android:minWidth="150dp"

                />


        <EditText
                android:id="@+id/displayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/displayName"
                android:gravity="center"
                android:background="@drawable/background_gradient2"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:inputType="textPersonName"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="15sp"
                android:textColorHint="@color/colorDark"
                android:textColor="@color/colorDark"
                android:layout_below="@id/avatar"
                />

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:gravity="center"
                android:background="@drawable/background_gradient2"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="15sp"
                android:layout_below="@id/displayName"
                android:textColorHint="@color/colorDark"
                android:textColor="@color/colorDark"
                />

        <Button
                android:id="@+id/apply_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_below="@id/email"
                android:textCursorDrawable="@drawable/sky_blue_cursor_color"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:background="@color/colorPrimary"
                />
        <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_text"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_below="@id/apply_button"
                android:textCursorDrawable="@drawable/sky_blue_cursor_color"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:background="@color/colorPrimary"
                />




    </RelativeLayout>

    <include layout="@layout/progress_bar" />

</RelativeLayout>